simplified default map so it's just name, added tableupdate() to init of edit mode

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ document.getElementById("editmapbutton").onclick = function() {
         mainmap.linkArray[mainmap.linkindex].style.border = "solid";
         mainmap.linkArray[mainmap.linkindex].style.borderWidth = "0.1px";
         document.getElementById("rotatezoombox").style.display = "block";
-
+        tableupdate();
     }
     else {
         document.getElementById("hammerxy").style.display = "none";
