documenting the map in the scroll of the map

--- a/pageeditor.html
+++ b/pageeditor.html
@@ -34,6 +34,9 @@
 <a href = "scroll.html">
     <img style = "width:50px;" src = "iconsymbols/editor.svg"/>
 </a>
+<a href = "index.html">
+    <img style = "width:50px;" src = "iconsymbols/navigator.svg"/>
+</a>
 
             <!--<img class=  "button" style = "width:50px;" src = "iconsymbols/helpicon.svg"/>-->
 
