made it so you can delete anything in the system as long as it has no more random dirs

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         <a href = "scroll.html">
             <img id = "scrollbutton" class = "button" style = "width:50px;" src = "iconsymbols/scrollicon.svg"/>
         </a>
+        <a href = "pagelist.php">
+            <img class = "button" style = "width:50px;" src = "iconsymbols/tree.svg"/>
+        </a>
+        
 
         <div id = "linkeditstuff">
             <table id = "linkedittable">
