removed pagelist.php and added list.html, copied from thing/

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <a href = "scroll.html">
             <img id = "scrollbutton" class = "button" style = "width:50px;" src = "iconsymbols/scrollicon.svg"/>
         </a>
-        <a href = "pagelist.php">
+        <a href = "list.html">
             <img class = "button" style = "width:50px;" src = "iconsymbols/tree.svg"/>
         </a>
         
