--- a/scroll.html
+++ b/scroll.html
@@ -36,7 +36,7 @@
          <img style = "width:50px;" src = "iconsymbols/editor.svg"/>    
     </a>
     <a href = "index.html">
-        <img style = "width:50px;" src = "iconsymbols/navigator.svg"/>
+        <img style = "width:50px;" src = "iconsymbols/mapicon.svg"/>
     </a>
     
     
@@ -59,6 +59,7 @@
             readme_md = this.responseText;
             rawhtml = converter.makeHtml(readme_md);
             document.getElementById("scrollscroll").innerHTML = rawhtml;
+           //MathJax.Hub.Typeset();//tell Mathjax to update the math
         }
     };
     httpc.open("GET", "fileloader.php?filename=README.md", true);
